# otel-demo-gen

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README-LLM-Setup.md  README.md  docker-compose.yml  otel-collector-config.yaml  package-lock.json  start-local.sh
.claude/: settings.local.json
.cursor/rules/: architecture.mdc
backend/: Dockerfile  base_infra_generator.py  config_schema.py  correlation_manager.py  database_metrics_generator.py  generator.py  host_metrics_generator.py  infra_loadbalancer_generator.py  infra_network_generator.py  infra_vm_generator.py  k8s_metrics_generator.py  llm_config_gen.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  scenario_llm_gen.py  storage_metrics_generator.py
backend/tests/: conftest.py  test_config_schema.py  test_correlation_manager.py  test_generator.py  test_llm_config_gen.py  test_llm_integration.py  test_main_api.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  config.js
frontend/src/components/: ConfigDisplay.jsx  Controls.jsx  Header.jsx  JobsPage.jsx  LLMStatus.jsx  ScenarioForm.jsx  ScenariosPage.jsx  (+1 more)
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  secret.yaml
k8s/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml
myenv/: pyvenv.cfg
scripts/: deploy.sh
(+1 files in other folders)
